Added more examples

--- a/grid-with-draggable-support/index.html
+++ b/grid-with-draggable-support/index.html
@@ -3,10 +3,11 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="script.js" ></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
+  <a href="../index.html">Go Back</a>
   <div class="wrapper">
     <div class="draggable" draggable="true">One</div>
     <div class="draggable" draggable="true"> Two</div>
