--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Page Title</title>
+  <title>CSS Grids Demo</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
+
 <body>
   <h2>Table of Contents</h2>
   <ul>
+    <li><a href="basic-grid/index.html">CSS Grids with Layout grid</a></li>
+    <li><a href="basic-grid-inline/index.html">CSS Grids with Layout inline-grid</a></li>
     <li><a href="grid-with-draggable-support/index.html">CSS Grids with HTML Draggable</a></li>
+    <li><a href="explicit-grid/grid-template-rows/index.html">Explicit Grid - Grid Template Rows</a></li>
+    <li><a href="explicit-grid/grid-template-columns/index.html">Explicit Grid - Grid Template Columns</a></li>
+    <li><a href="explicit-grid/grid-template-columns-fr-unit/index.html">Explicit Grid - Grid Template Columns FR Unit</a></li>
   </ul>
 </body>
+
 </html>
