add examples for - Grid Gaps (Gutters) - Positioning Items by Grid Line Numbers

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <li><a href="explicit-grid/grid-template-columns/index.html">Explicit Grid - Grid Template Columns</a></li>
     <li><a href="explicit-grid/grid-template-columns-fr-unit/index.html">Explicit Grid - Grid Template Columns FR Unit</a></li>
     <li><a href="min-max-grad-track-sizes/index.html">Min Max Grid Track Sizes</a></li>
+    <li><a href="repeating-grid-tracks/index.html">Repeating Grid Tracks</a></li>
+    <li><a href="grid-gaps/index.html">Grid Gaps (Gutters)</a></li>
+    <li><a href="position-by-line-numbers/index.html">Positioning Items by Grid Line Numbers</a></li>
   </ul>
 </body>
 
