Spanning Items Across Rows and Columns

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <li><a href="repeating-grid-tracks/index.html">Repeating Grid Tracks</a></li>
     <li><a href="grid-gaps/index.html">Grid Gaps (Gutters)</a></li>
     <li><a href="position-by-line-numbers/index.html">Positioning Items by Grid Line Numbers</a></li>
+    <li><a href="spanning-items-across-rows-n-cols/index.html">Spanning Items Across Rows and Columns</a></li>
   </ul>
 </body>
 
