Added .gitignore file Removed .idea files

--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html>
 
 <head>
-  <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>CSS Grids Demo</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>CSS Grids Demo</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 
 <body>
-  <h2>Table of Contents</h2>
-  <ul>
+<h2>Table of Contents</h2>
+<ul>
     <li><a href="basic-grid/index.html">CSS Grids with Layout grid</a></li>
     <li><a href="basic-grid-inline/index.html">CSS Grids with Layout inline-grid</a></li>
     <li><a href="grid-with-draggable-support/index.html">CSS Grids with HTML Draggable</a></li>
     <li><a href="explicit-grid/grid-template-rows/index.html">Explicit Grid - Grid Template Rows</a></li>
     <li><a href="explicit-grid/grid-template-columns/index.html">Explicit Grid - Grid Template Columns</a></li>
-    <li><a href="explicit-grid/grid-template-columns-fr-unit/index.html">Explicit Grid - Grid Template Columns FR Unit</a></li>
+    <li><a href="explicit-grid/grid-template-columns-fr-unit/index.html">Explicit Grid - Grid Template Columns FR
+        Unit</a></li>
     <li><a href="min-max-grad-track-sizes/index.html">Min Max Grid Track Sizes</a></li>
     <li><a href="repeating-grid-tracks/index.html">Repeating Grid Tracks</a></li>
     <li><a href="grid-gaps/index.html">Grid Gaps (Gutters)</a></li>
     <li><a href="position-by-line-numbers/index.html">Positioning Items by Grid Line Numbers</a></li>
     <li><a href="spanning-items-across-rows-n-cols/index.html">Spanning Items Across Rows and Columns</a></li>
-  </ul>
+</ul>
 </body>
 
 </html>
