Added naming grid lines example Code format in examples Added link to main

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset='utf-8'>
@@ -24,6 +24,8 @@
     <li><a href="grid-gaps/index.html">Grid Gaps (Gutters)</a></li>
     <li><a href="position-by-line-numbers/index.html">Positioning Items by Grid Line Numbers</a></li>
     <li><a href="spanning-items-across-rows-n-cols/index.html">Spanning Items Across Rows and Columns</a></li>
+    <li><a href="naming-grid-lines/index.html">Naming Grid Lines</a></li>
+
 </ul>
 </body>
 
