Added new version of grid drag and drop support and grid-widget-drag-support

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="basic-grid/index.html">CSS Grids with Layout grid</a></li>
     <li><a href="basic-grid-inline/index.html">CSS Grids with Layout inline-grid</a></li>
     <li><a href="grid-with-draggable-support/index.html">CSS Grids with HTML Draggable</a></li>
+    <li><a href="grid-widget-drag-support/index.html">CSS Grids with Widgets</a></li>
     <li><a href="explicit-grid/grid-template-rows/index.html">Explicit Grid - Grid Template Rows</a></li>
     <li><a href="explicit-grid/grid-template-columns/index.html">Explicit Grid - Grid Template Columns</a></li>
     <li><a href="explicit-grid/grid-template-columns-fr-unit/index.html">Explicit Grid - Grid Template Columns FR
@@ -25,7 +26,7 @@
     <li><a href="position-by-line-numbers/index.html">Positioning Items by Grid Line Numbers</a></li>
     <li><a href="spanning-items-across-rows-n-cols/index.html">Spanning Items Across Rows and Columns</a></li>
     <li><a href="naming-grid-lines/index.html">Naming Grid Lines</a></li>
-
+    <li><a href="drag-and-drop/index.html">CSS Drag and drop</a></li>
 </ul>
 </body>
 
