Added go back to the drag and drop

--- a/drag-and-drop/index.html
+++ b/drag-and-drop/index.html
@@ -7,6 +7,7 @@
     <script src="script.js"></script>
 </head>
 <body>
+<a href="../index.html">Go Back</a>
 <section id="list">
     <div id='div1' class='divRec'>
         <div class='inside'>item 1</div>
